# TreasuryAssistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: agent_executor.py  main.py
app/assistant/: agent.py  context_builder.py  context_compressor.py  continuation.py  orchestrator.py  plan_executor.py  plan_validator.py  planner.py  prompts.py  result_normalizer.py  turn_classifier.py  types.py
app/cash/: agent.py  server.py
app/config/: agents.docker.yaml  agents.yaml  logging.yaml
app/core/: a2a_client.py  a2a_sdk.py  llm_client.py  logging_config.py  registry.py  skill_registry.py
app/memory/: __init__.py  state.py  store.py
app/treasury/: agent.py  server.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.jsx  styles.css
tests/: test_agent_executor.py  test_main.py
tests/assistant/: test_agent.py  test_assistant_server.py  test_context_builder.py  test_context_compressor.py  test_human_loop.py  test_orchestrator.py  test_plan_executor.py  test_plan_validator.py  test_prompts.py  test_route_planner.py
tests/cash/: test_cash_agent.py  test_cash_server.py
tests/core/: test_a2a_client.py  test_agent_card.py  test_llm_client.py  test_logging_config.py  test_registry.py  test_skill_registry.py
tests/memory/: test_memory_service.py
tests/treasury/: test_treasury_agent.py  test_treasury_server.py
