[project]
name = "treasury-assistant"
version = "0.1.0"
description = "A2A-based treasury super agent with mock cash and treasury subagents"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[all]==0.3.22",
    "fastapi==0.124.2",
    "httpx==0.28.1",
    "langgraph==1.0.6",
    "litellm==1.81.0",
    "pydantic==2.12.3",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.2",
    "uvicorn==0.40.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]

[tool.ruff]
exclude = ["sample"]
